--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     </head>
     <body>
         <div>
-            Hello my name is manoj
+            Hello my name is Manoj
             <div>
                 And I am a software <b>Developer <i>Yes I am</i></b>
             </div>
         </div>
         <div>
-            Hello my name is swati
+            Hello my name is John
             <div>
                 And I am a software <b>Developer <i>Yes I am</i></b>
             </div>
         </div>
         <div>
-            Hello my name is manoj
+            Hello my name is Steven
             <div>
                 And I am a software <b>Designer <i>Yes I am</i></b>
             </div>
