--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </div>
     </body>
     <script>
-        wrapText(document.querySelector("body"), /am/gi, "<a href='#'>am</a>")
+        wrapText(document.querySelector("body"), "Manoj", "<a href='manoj'>Manoj</a>")
+
     </script>
 </html>
