--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="./wrapText.js"></script>
+        <script src="./replaceTextNode.js"></script>
     </head>
     <body>
         <div>
@@ -23,7 +23,6 @@
         </div>
     </body>
     <script>
-        wrapText(document.querySelector("body"), "Manoj", "<a href='manoj'>Manoj</a>")
-
+        replaceTextNode(document.querySelector("body"), "Manoj", "<a href='manoj'>Manoj</a>")
     </script>
 </html>
