added minified version

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="./replaceTextNode.js"></script>
+        <script src="./replaceTextNode.min.js"></script>
     </head>
     <body>
         <div>
